--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Square</h1>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <script language="javascript" type="text/javascript"
+            src = "libraries/p5.js"></script>
+    <script language="javascript" type="text/javascript"
+            src = "libraries/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript"
+            src = square.js></script>
+  </head>
+  
+  <body>
+    <h1>SQUARE</h1>
+  </body>
+</html>
